# fastpic

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  README.md  app_common.py  config.py  docker-compose.yml  main.py  models.py  pyproject.toml  scan_state.py  scanner.py  schemas.py  watcher.py
.cursor/rules/: backend.mdc  frontend.mdc
.github/workflows/: docker-build.yml
routers/: auth.py  folders.py  images.py  settings.py  tags.py
templates/: base.html  gallery.html  index.html  login.html  settings.html
templates/macros/: settings_macros.html
templates/partials/: folder_tree.html  tag_list.html
utils/: folder_tree.py  format.py  hash_utils.py  images.py  path_utils.py  search.py  stats.py  unique_path.py
